# xchk_xchk_content

xchk_xchk_content/: apps.py  contentviews.py  course.py  setup.cfg  urls.py
xchk_xchk_content/templates/xchk_xchk_content/: what_is_xchk.html
