[metadata]
name = xchk_xchk_content
version = 0.0.1
description = Course material pertaining to xchk
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >= 3.7
setup_requires = setuptools >= 38.3.0
install_requires = Django >=2.2
